--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Page</title>
 </head>
+<link rel="stylesheet" href="global.css">
 <link rel="stylesheet" href="/src/css/header.css">
 <body>
+    <div class="quadrado2"></div>
     <header>
         <img src="/src/img/eu.jpg" alt="minha_foto" class="img-portfolio">
         <div class="title">
@@ -14,5 +16,28 @@
             <h2>Sou desenvolvedor de software</h2>
         </div>
     </header>
+     <h3 class="sobre">Sobre mim</h3>
+        <p class="paragrafo2">Meu nome é Luiz Gustavo Kolben Rodrigues e tenho o sonho de virar um grande desenvolvedor!</p>
+     
+     <div class="quadrado">
+      <div class="paragrafo"> Faculdade Matérias</div>
+        <div class="list">
+             <ul>
+                 <li>Ux/Ui Design
+                 <li>Engenheira de software
+                 <li>Estrutura de dados
+                 <li>Programação web
+                 <li>Banco de dados
+                 <li>Programação POO
+             </ul>
+    </div>
+</div>
+ 
+    <h4 class="agaquatro">Onde me vejo daqui a 4 anos?</h4>
+    <p class="paragrafo3">-Trabalhando em uma grande empresa!</p>
+
+    <h5 class="agaquatro">O que gosto de fazer?</h5>
+    <p class="paragrafo3">-Gosto de filmes!!</p>
+
 </body>
 </html>
